--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,66 @@
-version: '3'
-services:
-  async:
+version: "3.9"
+
+x-app:
+  &producer
     build:
       context: .
-      dockerfile: Dockerfile
-    volumes:
-      - .:/app
-    command: python -u entrypoint.py
+      dockerfile: Dockerfile.producer
+    restart: never
+    networks:
+      - kafka-network
+    depends_on:
+      - zookeeper
+      - kafka
+
+
+services:
+  kafka:
+    image: confluentinc/cp-kafka:6.2.0
+    ports:
+      - "9092:9092"
+    environment:
+      - KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://localhost:9092
+      - KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR=1
+      - KAFKA_AUTO_CREATE_TOPICS_ENABLE=false
+      - KAFKA_CREATE_TOPICS=sync_data:1:1,async_data:1:1
+    networks:
+      - kafka-network
+    depends_on:
+      - zookeeper
+    healthcheck:
+      test: ["CMD", "kafka-topics", "--bootstrap-server", "localhost:9092", "--list"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
+  zookeeper:
+    image: confluentinc/cp-zookeeper:6.2.0
+    ports:
+      - "2181:2181"
+    environment:
+      - ZOOKEEPER_CLIENT_PORT=2181
+    networks:
+      - kafka-network
+    healthcheck:
+      test: ["CMD", "zkCli.sh", "-server", "localhost:2181", "ls", "/"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
+  sync_producer:
+    <<: *producer
+    command: "infisical run -- /app/main.py"
+    environment:
+      - KAFKA_TOPIC=sync_data
+      - KAFKA_BOOTSTRAP_SERVER=kafka:9092
+      - ZOOKEEPER_CONNECT=zookeeper:2181
+
+#  async_producer:
+#    <<: *producer
+#    command: "infisical run -- /app/amain.py"
+#    environment:
+#      - KAFKA_TOPIC=async_data
+#      - KAFKA_BOOTSTRAP_SERVER=kafka:9092
+#      - ZOOKEEPER_CONNECT=zookeeper:2181
+networks:
+  kafka-network:
