--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,18 +16,38 @@ x-app:
 
 
 services:
-  kafka:
-    image: confluentinc/cp-kafka:6.2.0
+  kafka_ui:
+    image: provectuslabs/kafka-ui:latest
     ports:
-      - "9092:9092"
+      - 8080:8080
     environment:
-      KAFKA_BROKER_ID: 1
+      DYNAMIC_CONFIG_ENABLED: 'true'
+    networks:
+      - kafka-network
+    depends_on:
+      - zookeeper
+      - kafka
+  zookeeper:
+    image: wurstmeister/zookeeper:3.4.6
+    expose:
+     - 2181
+    networks:
+      - kafka-network
+  kafka:
+    image: wurstmeister/kafka
+    ports:
+     - 9092:9092
+    expose:
+     - 9093
+    environment:
+      KAFKA_ADVERTISED_LISTENERS: INSIDE://kafka:9093,OUTSIDE://localhost:9092
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INSIDE:PLAINTEXT,OUTSIDE:PLAINTEXT
+      KAFKA_LISTENERS: INSIDE://0.0.0.0:9093,OUTSIDE://0.0.0.0:9092
+      KAFKA_INTER_BROKER_LISTENER_NAME: INSIDE
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092,PLAINTEXT_HOST://localhost:29092
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
-      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
-      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
       KAFKA_CREATE_TOPICS: sync_data:1:1,async_data:1:1
+    volumes:
+     - /var/run/docker.sock:/var/run/docker.sock
     networks:
       - kafka-network
     depends_on:
@@ -38,33 +58,18 @@ services:
       timeout: 5s
       retries: 5
 
-  zookeeper:
-    image: confluentinc/cp-zookeeper:6.2.0
-    ports:
-      - "2181:2181"
-    environment:
-      ZOOKEEPER_CLIENT_PORT: 2181
-      ZOOKEEPER_TICK_TIME: 2000
-    networks:
-      - kafka-network
-    healthcheck:
-      test: ["CMD", "zkCli.sh", "-server", "localhost:2181", "ls", "/"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-
   sync_producer:
     <<: *producer
     command: "python3 /app/main.py"
     environment:
       KAFKA_TOPIC: sync_data
-      KAFKA_BOOTSTRAP_SERVER: kafka:9092
+      KAFKA_BOOTSTRAP_SERVER: kafka:9093
       
   async_producer:
     <<: *producer
     command: "python3 /app/amain.py"
     environment:
       KAFKA_TOPIC: async_data
-      KAFKA_BOOTSTRAP_SERVER: kafka:9092
+      KAFKA_BOOTSTRAP_SERVER: kafka:9093
 networks:
   kafka-network:
