--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 version: "3.9"
 
-x-app:
+x-producer:
   &producer
     build:
       context: .
@@ -14,6 +14,19 @@ x-app:
       - zookeeper
       - kafka
 
+x-consumer:
+  &consumer
+    build:
+      context: .
+      dockerfile: Dockerfile.consumer
+    restart: unless-stopped
+    volumes:
+      - ./consumer:/app
+    networks:
+      - kafka-network
+    depends_on:
+      - zookeeper
+      - kafka
 
 services:
   kafka_ui:
@@ -64,9 +77,23 @@ services:
     environment:
       KAFKA_TOPIC: sync_data
       KAFKA_BOOTSTRAP_SERVER: kafka:9093
-      
+
+  sync_consumer:
+    <<: *consumer
+    command: "python3 /app/main.py"
+    environment:
+      KAFKA_TOPIC: sync_data
+      KAFKA_BOOTSTRAP_SERVER: kafka:9093
+
   async_producer:
     <<: *producer
+    command: "python3 /app/amain.py"
+    environment:
+      KAFKA_TOPIC: async_data
+      KAFKA_BOOTSTRAP_SERVER: kafka:9093
+      
+  async_consumer:
+    <<: *consumer
     command: "python3 /app/amain.py"
     environment:
       KAFKA_TOPIC: async_data
